--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
                         <div class="row ">
                             <div class="col-4">
                                 <a class="nolink" href="mailto:antonyjohn1010@gmail.com?subject=Lead%20from%20your%20site%20">
-                                    <img class="img-fluid " height="40" width="40" src="D:\project_images\gmail.png"></img>
+                                    <img class="img-fluid " height="40" width="40" src="gmail.png"></img>
                                 </a>
                             </div>
                             <div class="col-4">
                                 <a class="nolink" href="https://github.com/antonyjohn1997/">
-                                    <img class="img-fluid " height="40" width="40" src=" D:\project_images\github_image.png"></img>
+                                    <img class="img-fluid " height="40" width="40" src="github_image.png"></img>
                                 </a>
                             </div>
                             <div class="col-4">
                                 <a class="nolink" href="https://www.linkedin.com/in/antonyjohn-240566211">
-                                    <img class="img-fluid " height="40" width="40" src="D:\project_images\linkedin_image.png"></img>
+                                    <img class="img-fluid " height="40" width="40" src="linkedin_image.png"></img>
                                 </a>
                             </div>
                            
